@@ -11,11 +11,11 @@ plugins {
     id 'pl.allegro.tech.build.axion-release' version '1.18.17'
 }
 
-group = 'com.rundeck.plugin'
+group = 'com.github.rundeck-plugins'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(11)
+        languageVersion = JavaLanguageVersion.of(17)
     }
 }
 
@@ -37,6 +37,9 @@ scmVersion {
 
 project.version = scmVersion.version
 
+// Override version for Grails 7 upgrade
+project.version = '1.3.3-grails7-upgrade-test'
+
 configurations{
     //declare custom pluginLibs configuration to include only libs for this plugin
     pluginLibs
@@ -49,13 +52,14 @@ configurations{
 
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
 
-    implementation 'org.apache.groovy:groovy-all:4.0.22'
-    implementation(group:'org.rundeck', name: 'rundeck-core', version: '5.15.0-20250902') {
+    implementation 'org.apache.groovy:groovy-all:4.0.29'
+    implementation(group:'org.rundeck', name: 'rundeck-core', version: '6.0.0-SNAPSHOT') {
         exclude group: 'commons-lang', module: 'commons-lang'
     }
     // Add secure replacement for excluded commons-lang
@@ -108,3 +112,25 @@ jar {
 //set jar task to depend on copyToLib
 jar.dependsOn(copyToLib)
 
+test {
+    useJUnitPlatform()
+    
+    // Java 17+ module access
+    jvmArgs = [
+        '--add-opens=java.base/java.lang=ALL-UNNAMED',
+        '--add-opens=java.base/java.util=ALL-UNNAMED',
+        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+    ]
+}
+
+apply plugin: 'maven-publish'
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'com.github.rundeck-plugins'
+            artifactId = 'pagerduty-notification'
+            from components.java
+        }
+    }
+}
